# pypoolchem

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
docs/: api-reference.md  chemistry.md  configuration.md  dosing.md  effects.md  getting-started.md  index.md  models.md
src/pypoolchem/: __init__.py  config.py  exceptions.py
src/pypoolchem/chemistry/: __init__.py  constants.py  csi.py  factors.py  fc_cya.py  lsi.py
src/pypoolchem/dosing/: __init__.py  calculator.py  chemicals.py
src/pypoolchem/effects/: __init__.py  predictions.py
src/pypoolchem/models/: __init__.py  pool.py  targets.py  water.py
src/pypoolchem/utils/: __init__.py  conversions.py  volume.py
tests/: __init__.py  test_chemistry.py  test_dosing.py  test_models.py  test_utils.py
