[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypoolchem"
version = "0.1.0"
description = "Pool and spa water chemistry calculations library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Bryan Li" },
]
keywords = [
    "pool",
    "spa",
    "chemistry",
    "water",
    "lsi",
    "csi",
    "chlorine",
    "home-assistant",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.148.5",
    "ruff>=0.14.7",
    "mypy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/joyfulhouse/pypoolchem"
Repository = "https://github.com/joyfulhouse/pypoolchem"
Documentation = "https://github.com/joyfulhouse/pypoolchem#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pypoolchem"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "ERA",  # eradicate
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF022", # __all__ sorting (we prefer logical grouping)
]

[tool.ruff.lint.isort]
known-first-party = ["pypoolchem"]

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src/pypoolchem"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
